<resources>
    <string name="app_name">"QuadCalc"</string>
    <string name="toast">Enter a value</string>
    <string name="title">Quadratic Equation Solver</string>
    <string name="firstNum">Enter \'a\' value</string>
    <string name="secondNum">Enter \'b\' value</string>
    <string name="thirdNum">Enter \'c\' value</string>
    <string name="calcButton">Calculate </string>
    <string name="posNeg">+/- </string>
    <string name="clear">Clear </string>
    <string name="calc">Calculator </string>
    <string name="menuQuad">Quadratic Eqn. Solver </string>
    <string name="bClr">CLR </string>
    <string name="bPow">^ </string>
    <string name="bDel">DEL </string>
    <string name="bAdd">+ </string>
    <string name="bSub">- </string>
    <string name="bMul">× </string>
    <string name="bDiv">÷ </string>
    <string name="bEqual">= </string>
    <string name="b.">. </string>
    <string name="b0">0 </string>
    <string name="b1">1 </string>
    <string name="b2">2 </string>
    <string name="b3">3 </string>
    <string name="b4">4 </string>
    <string name="b5">5 </string>
    <string name="b6">6 </string>
    <string name="b7">7 </string>
    <string name="b8">8 </string>
    <string name="b9">9 </string>

</resources>
