<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calc"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:id="@id/textView"
        android:textSize="35sp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:background="@color/colorPrimary"
        android:layout_marginTop="60dp"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:id="@+id/calcScreen"
        android:textColor="@color/colorAccent"
        android:textSize="35sp"
        android:textStyle="italic"
        android:digits="0123456789"
        android:inputType="numberSigned"
        android:textAlignment="gravity"
        android:gravity="right"
        android:maxLength="15"/>

    <Button
    android:layout_width="75dp"
    android:layout_height="75dp"
    android:background="@color/colorAccent"
    android:layout_marginTop="180dp"
    android:text="@string/b1"
    android:textColor="@color/colorButton"
    android:textSize="30sp"
    android:id="@+id/b1"
    android:onClick="onClick"/>

    <Button
    android:layout_width="75dp"
    android:layout_height="75dp"
    android:background="@color/colorAccent"
    android:layout_marginTop="180dp"
    android:layout_marginLeft="90dp"
    android:text="@string/b2"
    android:textColor="@color/colorButton"
    android:textSize="30sp"
    android:id="@+id/b2"
    android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="180dp"
        android:text="@string/b3"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/b3"
        android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="270dp"
        android:text="@string/b4"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/b4"
        android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="90dp"
        android:text="@string/b5"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/b5"
        android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="270dp"
        android:layout_marginLeft="180dp"
        android:text="@string/b6"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/b6"
        android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="360dp"
        android:text="@string/b7"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/b7"
        android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="90dp"
        android:text="@string/b8"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/b8"
        android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="360dp"
        android:layout_marginLeft="180dp"
        android:text="@string/b9"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/b9"
        android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="90dp"
        android:text="@string/b0"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/b0"
        android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="450dp"
        android:text="@string/b."
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/b."
        android:onClick="onClick"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="450dp"
        android:layout_marginLeft="180dp"
        android:text="@string/posNeg"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/bPosNeg"
        android:onClick="onPosNeg"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="385dp"
        android:layout_marginLeft="270dp"
        android:text="@string/bSub"
        android:textColor="@color/colorButton"
        android:textSize="35sp"
        android:id="@+id/bSub"
        android:onClick="onAdd"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="345dp"
        android:layout_marginLeft="270dp"
        android:text="@string/bMul"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/bMul"
        android:onClick="onAdd"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="300dp"
        android:layout_marginLeft="270dp"
        android:text="@string/bDiv"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/bDiv"
        android:onClick="onAdd"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="70dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="235dp"
        android:layout_marginLeft="270dp"
        android:text="@string/bDel"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        android:id="@+id/bDel"
        android:onClick="onDelete"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="270dp"
        android:text="@string/bClr"
        android:textColor="@color/colorButton"
        android:textSize="20sp"
        android:id="@+id/bClr"
        android:onClick="onClear"/>

    <Button
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="430dp"
        android:layout_marginLeft="270dp"
        android:text="@string/bAdd"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/bAdd"
        android:onClick="onAdd" />


    <Button
        android:layout_width="75dp"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="474dp"
        android:layout_marginLeft="270dp"
        android:text="@string/bEqual"
        android:textColor="@color/colorButton"
        android:textSize="30sp"
        android:id="@+id/bEqual"
        android:onClick="onCalculate"/>

</RelativeLayout>
