<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.gsproductions.helloworldapplication.MainActivity"
    tools:showIn="@layout/activity_main"
    android:background="@color/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:id="@id/textView"
        android:textSize="35dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/firstNum"
        android:textSize="25dp"
        android:textColorHint="@color/colorPrimary"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textCursorDrawable="@null"
        android:id="@id/editText"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="190dp"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/secondNum"
        android:textSize="25dp"
        android:textColorHint="@color/colorPrimary"
        android:textColor="@color/colorAccent"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/colorAccent"
        android:id="@id/editText2"
        android:imeOptions="actionNext"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="250dp"
        android:inputType="numberDecimal|numberSigned"
        android:hint="@string/thirdNum"
        android:textSize="25dp"
        android:textColorHint="@color/colorPrimary"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/colorAccent"
        android:textCursorDrawable="@null"
        android:id="@id/editText3"
        android:imeOptions="actionDone"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:text="@string/calcButton"
        android:textSize="20dp"
        android:background="@color/colorAccent"
        android:textColor="@color/colorButton"
        android:id="@+id/button"
        android:onClick="calcButton"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView2"
        android:layout_marginTop="405dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/textView3"
        android:layout_marginTop="405dp"
        android:layout_alignParentRight="true"
        android:textAlignment="gravity"
        android:gravity="right"/>

    <Button
    android:layout_width="85dp"
    android:layout_height="wrap_content"
    android:text="@string/clear"
    android:textSize="15dp"
    android:textColor="@color/colorButton"
    android:background="@color/colorAccent"
    android:id="@+id/clearButton"
    android:layout_marginTop="490dp"
    android:layout_centerHorizontal="true"
    android:onClick="clearButton"/>








</RelativeLayout>
