<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textSize="50sp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="50dp"
        android:id="@+id/quadCalc"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:id="@+id/menu1"
        android:text="@string/calc"
        android:textSize="25sp"
        android:textColor="@color/colorButton"
        android:layout_marginTop="220dp"
        android:onClick="menuCalc" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/colorAccent"
        android:layout_centerHorizontal="true"
        android:id="@+id/menu2"
        android:text="@string/menuQuad"
        android:textSize="25sp"
        android:textColor="@color/colorButton"
        android:layout_marginTop="330dp"
        android:onClick="menuQuad"/>

</RelativeLayout>
